Fixes a minor spacing problem

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
     flex-wrap: wrap;
     justify-content: space-evenly;
     padding: 32px;
+    gap:32px;
 }
 
 .card {
